--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
+  flex_color_scheme: ^7.2.0
+  adaptive_theme: ^3.3.0
 
 dev_dependencies:
   flutter_test:
